<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grandmas Boy Soundboard</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="btnDelusional">Crazy</string>
    <string name="btnFreak">Freak</string>
    <string name="btnGenius">Genius</string>
    <string name="btnSeeMe">See</string>
    <string name="btnMetalLegs">Metal</string>
    <string name="btnMiddleName">Middle</string>
    <string name="btnNever">Never</string>
    <string name="btnRobot">Robot</string>
    <string name="btnTakeCare">Bye</string>
    <string name="btnExit">Exit</string>
    <string name="btnMovie">Movie</string>
    <string name="btnInstructions">Instructions</string>
    <string name="alertTitle">Options</string>
    <string-array
        name="alert_array">
        <item>@string/alertRingtone</item>
        <item>@string/alertNotification</item>
        <item>@string/alertCancel</item>
    </string-array>
    <string name="alertRingtone">Save as Ringtone</string>
    <string name="alertNotification">Save as Notification</string>
    <string name="alertCancel">Cancel</string>
    <string name="webURL">http://www.imdb.com/title/tt0456554/?ref_=nv_sr_2</string>
    <string name="btnBack">Back</string>
    <string name="directionsTV">HOW TO USE:\n\n *Press a button to play the corresponding sound*\n\n *Press and hold a button to save the corresponding sound as a ringtone or text message notification*\n\n *Beware, this will set the tone as your overall ringtone or text message notification – not just save it to your SD card*\n\n *Tell your friends to download this app*\n\n *Go watch Grandma\'s Boy again*</string>
    <string name="btnAdios">Adios</string>
    <string name="btnHate">Hate</string>
    <string name="btnPlease">Please</string>
    <string name="btnSit">Sit</string>

</resources>
