<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GBSMainActivity" >
	<ScrollView
	    android:id="@+id/background"
	    android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:background="@drawable/angry"
    	android:layout_weight="1">
	<RelativeLayout
		android:layout_height="wrap_content"    
		android:layout_width="match_parent">
        
    <Button
        android:id="@+id/btnDelusional"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/btnSeeMe"
        android:layout_below="@+id/btnSeeMe"
        android:layout_marginTop="18dp"
        android:text="@string/btnDelusional"/>

    <Button
        android:id="@+id/btnMiddleName"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/btnDelusional"
        android:layout_alignBottom="@+id/btnDelusional"
        android:layout_alignLeft="@+id/btnGenius"
        android:text="@string/btnMiddleName"/>

    <Button
        android:id="@+id/btnTakeCare"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/btnDelusional"
        android:layout_below="@+id/btnDelusional"
        android:layout_marginTop="20dp"
        android:text="@string/btnTakeCare" />

    <Button
        android:id="@+id/btnRobot"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/btnTakeCare"
        android:layout_alignBottom="@+id/btnTakeCare"
        android:layout_alignLeft="@+id/btnMiddleName"
        android:text="@string/btnRobot" />

    <Button
        android:id="@+id/btnMetalLegs"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/btnMiddleName"
        android:layout_alignBottom="@+id/btnMiddleName"
        android:layout_alignLeft="@+id/btnFreak"
        android:text="@string/btnMetalLegs" />

    <Button
        android:id="@+id/btnGenius"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/btnFreak"
        android:layout_alignBottom="@+id/btnFreak"
        android:layout_centerHorizontal="true"
        android:text="@string/btnGenius" />

    <Button
        android:id="@+id/btnSeeMe"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/btnGenius"
        android:layout_alignBottom="@+id/btnGenius"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/btnGenius"
        android:text="@string/btnSeeMe" />

    <Button
        android:id="@+id/btnNever"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/btnRobot"
        android:layout_alignBottom="@+id/btnRobot"
        android:layout_marginRight="22dp"
        android:layout_toLeftOf="@+id/btnRobot"
        android:text="@string/btnNever" />

    <Button
        android:id="@+id/btnFreak"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btnNever"
        android:layout_marginTop="78dp"
        android:text="@string/btnFreak" />

    <Button
        android:id="@+id/btnHate"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnRobot"
        android:text="@string/btnHate" />

    <Button
        android:id="@+id/btnAdios"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/btnAdios" />

    <Button
        android:id="@+id/btnPlease"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnRobot"
        android:layout_alignLeft="@+id/btnTakeCare"
        android:layout_alignParentBottom="true"
        android:text="@string/btnPlease" />

    </RelativeLayout>
	</ScrollView>
	<FrameLayout
	    android:layout_width="match_parent"
	    android:layout_height="50dp" 
		android:background="#CFF"
		android:layout_gravity="bottom">
		<Button
		    android:id="@+id/btnExit"
		    android:layout_width="80dp"
		    android:layout_height="50dp"
		    android:layout_gravity="bottom"
		    android:text="@string/btnExit" />
		<Button
		    android:id="@+id/btnMovie"
		    android:layout_width="80dp"
		    android:layout_height="50dp"
		    android:layout_gravity="right"
		    android:text="@string/btnMovie" />

		<Button
		    android:id="@+id/btnInstructions"
		    android:layout_width="wrap_content"
		    android:layout_height="50dp"
		    android:layout_gravity="center"
		    android:text="@string/btnInstructions" />
	</FrameLayout>

</LinearLayout>